--- a/RC23_timer_point.html
+++ b/RC23_timer_point.html
@@ -22,7 +22,7 @@
 </form> -->
 
 <div class="Pole">
-    <img src="images/Field.jpg" alt="field" title="RC23_field">
+    <img src="Field.jpg" alt="field" title="RC23_field">
     <div class="Type3">
         <input type="checkbox" value="v_type3" id="b_type3" name="Type3"><label for="b_type3">70</label>
     </div>
