--- a/RC23_timer_point_PC.html
+++ b/RC23_timer_point_PC.html
@@ -774,7 +774,7 @@ function onButtonClick() {//状態表示
         Status_16b0 = Status_16b;
 
         if(Status_3r == 1 && Status_21r == 1 && Status_22r == 1 && Status_23r == 1 && Status_24r == 1 && Status_11r == 1 && Status_12r == 1 && Status_13r == 1){
-            document.getElementById("red_tensuu").innerHTML = "Cheiyo";
+            document.getElementById("red_tensuu").innerHTML = "Chey-Yo";
             count_stop()
             Status_game = 1;
 
@@ -790,7 +790,7 @@ function onButtonClick() {//状態表示
         }
 
         if(Status_3b == 1 && Status_21b == 1 && Status_22b == 1 && Status_23b == 1 && Status_24b == 1 && Status_14b == 1 && Status_15b == 1 && Status_16b == 1){
-            document.getElementById("blue_tensuu").innerHTML = "Cheiyo";
+            document.getElementById("blue_tensuu").innerHTML = "Chey-Yo";
             count_stop()
             Status_game = 2;
             type1_1r0 = document.getElementById("b_type1_1r").checked;
