--- a/RC23_test_run_PC.html
+++ b/RC23_test_run_PC.html
@@ -22,7 +22,7 @@
 </form> -->
 
 <div class="Pole">
-    <img src="Field.jpg" alt="fieldr" height="494.5" title="RC23_fieldr">
+    <img src="Field.jpg" alt="fieldr" height="494.5" width="498.8377" title="RC23_fieldr">
     <div class="Type3r">
         <input type="checkbox" value="v_type3r" id="b_type3r" name="Type3r"><label for="b_type3r">70</label>
     </div>
@@ -58,7 +58,7 @@
     </div>
     　　
     　　
-    <img src="Field_half.jpg" alt="fieldb" height="494.5" title="RC23_fieldb">
+    <img src="Field_half.jpg" alt="fieldb" height="494.5" width="384.9726" title="RC23_fieldb">
     <div class="Type3b">
         <input type="checkbox" value="v_type3b" id="b_type3b" name="Type3b"><label for="b_type3b">妨</label>
     </div>
