--- a/RC23_test_run_PC.html
+++ b/RC23_test_run_PC.html
@@ -80,6 +80,29 @@
     <div class="Step">
         <input type="checkbox" value="v_step" id="b_step" name="Step"><label for="b_step">段越え</label>
     </div>
+
+    <div class="timeput">
+        <div id="cheyyo_put" >   </div>
+        <div id="tokuten_put" >   </div>
+        <div id="time_bridge_put" >   </div>
+        <div id="time_step_put" >   </div>
+        <div id="time_3_put" >   </div>
+        <div id="time_3_int_put" >   </div>
+        <div id="time_21_put" >   </div>
+        <div id="time_21_int_put" >   </div>
+        <div id="time_22_put" >   </div>
+        <div id="time_22_int_put" >   </div>
+        <div id="time_23_put" >   </div>
+        <div id="time_23_int_put" >   </div>
+        <div id="time_24_put" >   </div>
+        <div id="time_24_int_put" >   </div>
+        <div id="time_11_put" >   </div>
+        <div id="time_12_put" >   </div>
+        <div id="time_13_put" >   </div>
+        <div id="time_14_put" >   </div>
+        <div id="time_15_put" >   </div>
+        <div id="time_16_put" >   </div>
+    </div>
 </div>
 
 <!-- ////////////////////////////////////////////Script Time/////////////////////////////////////////////////// -->
@@ -665,7 +688,7 @@ function onButtonClick() {//状態表示
 </script>
 
 <div id="red_tensuu" >     </div>
-<div id="cheyyo_put" >   </div>
+<!-- <div id="cheyyo_put" >   </div>
 <div id="tokuten_put" >   </div>
 <div id="time_bridge_put" >   </div>
 <div id="time_step_put" >   </div>
@@ -684,7 +707,7 @@ function onButtonClick() {//状態表示
 <div id="time_13_put" >   </div>
 <div id="time_14_put" >   </div>
 <div id="time_15_put" >   </div>
-<div id="time_16_put" >   </div>
+<div id="time_16_put" >   </div> -->
 
 <!-- <input type="button" id="iPhone" size="10" value="iPhone" onclick="location.href='https://kosuke0512.github.io/Timer/RC23_timer_point_iPhone.html'">
 <input type="button" id="iPad" size="10" value="iPad" onclick="location.href='https://kosuke0512.github.io/Timer/RC23_timer_point_iPad.html'"> -->
