--- a/RC23_test_run_iPad.html
+++ b/RC23_test_run_iPad.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head><meta name="viewport" content="width400" >
-<link rel="stylesheet"href="RC23_test_run_PC.css">
-<title>RC23テストランタイマ PC</title>
+<link rel="stylesheet"href="RC23_test_run_iPad.css">
+<title>RC23テストランタイマ iPad</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 </form> -->
 
 <div class="Pole">
-    <img src="Field.jpg" alt="fieldr" width="40%" title="RC23_fieldr">
+    <img src="Field.jpg" alt="fieldr" width="54%" title="RC23_fieldr">
     <div class="Type3r">
         <input type="checkbox" value="v_type3r" id="b_type3r" name="Type3r"><label for="b_type3r">70</label>
     </div>
@@ -59,7 +59,7 @@
         <input type="checkbox" value="v_type1_6r" id="b_type1_6r" name="Type1_6r"><label for="b_type1_6r">25</label>
     </div>
     　　
-    <img src="Field_half.jpg" alt="fieldb" width="30.86957%" title="RC23_fieldb">
+    <img src="Field_half.jpg" alt="fieldb" width="41.67391%" title="RC23_fieldb">
     <div class="Type3b">
         <input type="checkbox" value="v_type3b" id="b_type3b" name="Type3b"><label for="b_type3b">妨</label>
     </div>
@@ -81,35 +81,12 @@
     <div class="Step">
         <input type="checkbox" value="v_step" id="b_step" name="Step"><label for="b_step">段越え</label>
     </div>
-
-    <div class="timeput">
-        <div id="cheyyo_put" >   </div>
-        <div id="tokuten_put" >   </div>
-        <div id="time_bridge_put" >   </div>
-        <div id="time_step_put" >   </div>
-        <div id="time_3_put" >   </div>
-        <div id="time_3_int_put" >   </div>
-        <div id="time_21_put" >   </div>
-        <div id="time_21_int_put" >   </div>
-        <div id="time_22_put" >   </div>
-        <div id="time_22_int_put" >   </div>
-        <div id="time_23_put" >   </div>
-        <div id="time_23_int_put" >   </div>
-        <div id="time_24_put" >   </div>
-        <div id="time_24_int_put" >   </div>
-        <div id="time_11_put" >   </div>
-        <div id="time_12_put" >   </div>
-        <div id="time_13_put" >   </div>
-        <div id="time_14_put" >   </div>
-        <div id="time_15_put" >   </div>
-        <div id="time_16_put" >   </div>
-    </div>
 </div>
 
 <div class="Change">
     <input type="button" id="iPhone" style="width: 80px; padding: 3px; font-size:20px;" value="iPhone" onclick="location.href='https://kosuke0512.github.io/Timer/RC23_test_run_iPhone.html'">
     　
-    <input type="button" id="iPad" style="width: 55px; padding: 3px; font-size:20px;" value="iPad" onclick="location.href='https://kosuke0512.github.io/Timer/RC23_test_run_iPad.html'">
+    <input type="button" id="PC" style="width: 50px; padding: 3px; font-size:20px;" value="PC" onclick="location.href='https://kosuke0512.github.io/Timer/RC23_test_run_PC.html'">
 </div>
 
 <!-- ////////////////////////////////////////////Script Time/////////////////////////////////////////////////// -->
@@ -695,25 +672,25 @@ function onButtonClick() {//状態表示
 </script>
 
 <div id="red_tensuu" >     </div>
-<!-- <div id="cheyyo_put" >   </div>
-<div id="tokuten_put" >   </div>
-<div id="time_bridge_put" >   </div>
-<div id="time_step_put" >   </div>
-<div id="time_3_put" >   </div>
-<div id="time_3_int_put" >   </div>
-<div id="time_21_put" >   </div>
-<div id="time_21_int_put" >   </div>
-<div id="time_22_put" >   </div>
-<div id="time_22_int_put" >   </div>
-<div id="time_23_put" >   </div>
-<div id="time_23_int_put" >   </div>
-<div id="time_24_put" >   </div>
-<div id="time_24_int_put" >   </div>
-<div id="time_11_put" >   </div>
-<div id="time_12_put" >   </div>
-<div id="time_13_put" >   </div>
-<div id="time_14_put" >   </div>
-<div id="time_15_put" >   </div>
-<div id="time_16_put" >   </div> -->
+<div id="cheyyo_put" style= "font-size:20px;">   </div>
+<div id="tokuten_put" style= "font-size:20px;">   </div>
+<div id="time_bridge_put" style= "font-size:20px;">   </div>
+<div id="time_step_put" style= "font-size:20px;">   </div>
+<div id="time_3_put" style= "font-size:20px;">   </div>
+<div id="time_3_int_put" style= "font-size:20px;">   </div>
+<div id="time_21_put" style= "font-size:20px;">   </div>
+<div id="time_21_int_put" style= "font-size:20px;">   </div>
+<div id="time_22_put" style= "font-size:20px;">   </div>
+<div id="time_22_int_put" style= "font-size:20px;">   </div>
+<div id="time_23_put" style= "font-size:20px;">   </div>
+<div id="time_23_int_put" style= "font-size:20px;">   </div>
+<div id="time_24_put" style= "font-size:20px;">   </div>
+<div id="time_24_int_put" style= "font-size:20px;">   </div>
+<div id="time_11_put" style= "font-size:20px;">   </div>
+<div id="time_12_put" style= "font-size:20px;">   </div>
+<div id="time_13_put" style= "font-size:20px;">   </div>
+<div id="time_14_put" style= "font-size:20px;">   </div>
+<div id="time_15_put" style= "font-size:20px;">   </div>
+<div id="time_16_put" style= "font-size:20px;">   </div>
 
 </body></html>
